--- a/homer/homer-config/config.yml
+++ b/homer/homer-config/config.yml
@@ -88,56 +88,56 @@ services:
         logo: "/assets/icons/jellyfin.svg"
         subtitle: ""
         tag: "video"
-        url: "http://192.168.31.112:8096"
+        url: "http://jellyfin.home.server"
         target: "_blank"
 
       - name: "MKVToolNix"
         logo: "/assets/icons/mkvtoolnix.png"
         subtitle: ""
         tag: "video"
-        url: "http://192.168.31.112:5800"
+        url: "http://mkvtoolnix.home.server"
         target: "_blank"
 
       - name: "tinyMediaManager"
         logo: "/assets/icons/tiny-media-manager.png"
         subtitle: ""
         tag: "video"
-        url: "http://192.168.31.112:4000"
+        url: "http://tinymediamanager.home.server"
         target: "_blank"
 
       - name: "AList"
         logo: "/assets/icons/alist.svg"
         subtitle: ""
         tag: "tool"
-        url: "http://192.168.31.112:5244"
+        url: "http://alist.home.server"
         target: "_blank"
 
       - name: "AriaNg"
         logo: "/assets/icons/ariang.png"
         subtitle: ""
         tag: "tool"
-        url: "http://192.168.31.112:6880"
+        url: "http://ariang.home.server"
         target: "_blank"
 
       - name: "qBittorrent"
         logo: "/assets/icons/qbittorrent.svg"
         subtitle: ""
         tag: "tool"
-        url: "http://192.168.31.112:8080"
+        url: "http://qbittorrent.home.server"
         target: "_blank"
 
-      - name: "Clash"
-        logo: "/assets/icons/clash.png"
+      - name: "v2rayA"
+        logo: "/assets/icons/v2raya.png"
         subtitle: ""
         tag: "tool"
-        url: "http://192.168.31.112:7880"
+        url: "http://v2raya.home.server"
         target: "_blank"
 
       - name: "Stirling-PDF"
         logo: "/assets/icons/stirling-pdf.svg"
         subtitle: ""
         tag: "tool"
-        url: "http://192.168.31.112:8082/?lang=zh_CN"
+        url: "http://stirlingpdf.home.server/?lang=zh_CN"
         target: "_blank"
 
   - name: "System"
@@ -147,33 +147,33 @@ services:
         logo: "/assets/icons/glances.svg"
         subtitle: ""
         tag: "system"
-        url: "http://192.168.31.112:61208"
+        url: "http://glances.home.server"
         target: "_blank"
 
       - name: "Scrutiny"
         logo: "/assets/icons/scrutiny.svg"
         subtitle: ""
         tag: "system"
-        url: "http://192.168.31.112:8081"
+        url: "http://scrutiny.home.server"
         target: "_blank"
 
       - name: "WeTTY"
         logo: "/assets/icons/wetty.svg"
         subtitle: ""
         tag: "system"
-        url: "http://192.168.31.112:3030"
+        url: "http://wetty.home.server"
         target: "_blank"
 
       - name: "FileBrowser"
         logo: "/assets/icons/filebrowser.svg"
         subtitle: ""
         tag: "system"
-        url: "http://192.168.31.112:8088"
+        url: "http://filebrowser.home.server"
         target: "_blank"
 
       - name: "Windows 10"
         logo: "/assets/icons/windows-10.svg"
         subtitle: ""
         tag: "system"
-        url: "http://192.168.31.112:8006"
+        url: "http://windows.home.server:8006"
         target: "_blank"
