--- a/nginx/nginx-config/conf.d/default.conf
+++ b/nginx/nginx-config/conf.d/default.conf
@@ -1,17 +1,20 @@
-
 # 默认服务 - 可以指向 Homer 导航页
-server {
-    listen 80;
-    server_name home.server;
+# server {
+#     listen 80;
+#     server_name home.server;
     
-    location / {
-        proxy_pass http://homer:8080;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-}
+#     location / {
+#         proxy_pass http://homer:8080;
+#     }
+# }
+# # 默认服务器 - 处理未知子域名
+# server {
+#     listen 80 default_server;
+#     server_name _;
+    
+#     # 重定向到 Homer 主页
+#     return 301 http://homer.home.server;
+# }
 
 # Homer 导航页
 server {
@@ -20,10 +23,17 @@ server {
     
     location / {
         proxy_pass http://homer:8080;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+
+        include /etc/nginx/proxy-headers.conf;
+    }
+
+    # 状态监控（通过主域名访问）
+    location /nginx_status {
+        stub_status on;
+        access_log off;
+        allow 127.0.0.1;
+        allow 192.168.31.0/24;
+        deny all;
     }
 }
 
@@ -34,45 +44,190 @@ server {
     
     location / {
         proxy_pass http://qbittorrent:8080;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # qBittorrent 需要的基础认证转发
+
+        include /etc/nginx/proxy-headers.conf;
         proxy_set_header Authorization $http_authorization;
         proxy_pass_header Authorization;
     }
 }
 
-# # Scrutiny
+# Scrutiny
+server {
+    listen 80;
+    server_name scrutiny.home.server;
+    
+    location / {
+        proxy_pass http://scrutiny:8080;
+
+        include /etc/nginx/proxy-headers.conf;
+    }
+}
+
+# Jellyfin
+server {
+    listen 80;
+    server_name jellyfin.home.server;
+    
+    location / {
+        proxy_pass http://jellyfin:8096;
+
+        include /etc/nginx/proxy-headers.conf;
+        proxy_set_header X-Forwarded-Server $host;
+
+        # Jellyfin 特殊配置
+        proxy_buffering off;
+        proxy_http_version 1.1;
+        proxy_set_header X-Forwarded-Server $host;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+    }
+}
+
+# Alist
+server {
+    listen 80;
+    server_name alist.home.server;
+    
+    location / {
+        proxy_pass http://alist:5244;
+
+        include /etc/nginx/proxy-headers.conf;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+    }
+}
+
+# AriaNG
+server {
+    listen 80;
+    server_name ariang.home.server;
+    
+    location / {
+        proxy_pass http://ariang:6880;
+
+        include /etc/nginx/proxy-headers.conf;
+
+    }
+}
+
+# v2rayA
+server {
+    listen 80;
+    server_name v2raya.home.server;
+    
+    location / {
+        proxy_pass http://v2raya:2017;
+
+        include /etc/nginx/proxy-headers.conf;
+    }
+}
+
+# FileBrowser
+server {
+    listen 80;
+    server_name filebrowser.home.server;
+    
+    location / {
+        proxy_pass http://filebrowser:80;
+
+        include /etc/nginx/proxy-headers.conf;
+    }
+}
+
+# Glances
+server {
+    listen 80;
+
+    server_name glances.home.server;
+    
+    location / {
+        proxy_pass http://glances:61208;
+
+        include /etc/nginx/proxy-headers.conf;
+    }
+}
+
+# MKVToolNix
+server {
+    listen 80;
+    server_name mkvtoolnix.home.server;
+    
+    location / {
+        proxy_pass http://mkvtoolnix:5800;
+
+        include /etc/nginx/proxy-headers.conf;
+    }
+}
+
+# # Stirling-PDF
+server {
+    listen 80;
+    server_name stirlingpdf.home.server;
+    
+    location / {
+        proxy_pass http://stirlingpdf:8080;
+
+        include /etc/nginx/proxy-headers.conf;
+    }
+}
+
+# TinyMediaManager
+server {
+    listen 80;
+    server_name tinymediamanager.home.server;
+    
+    location / {
+        proxy_pass http://tinymediamanager:4000;
+
+        include /etc/nginx/proxy-headers.conf;
+
+        # WebSocket 支持
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+
+        proxy_read_timeout 86400s;  # 24小时
+        proxy_send_timeout 86400s;
+        proxy_connect_timeout 300s;
+
+        # 性能优化
+        proxy_buffering off;
+    }
+}
+
+## Wetty
+server {
+    listen 80;
+    server_name wetty.home.server;
+    
+    location / {
+        proxy_pass http://wetty:3000;
+
+        include /etc/nginx/proxy-headers.conf;
+    }
+}
+
+# Windows
 # server {
 #     listen 80;
-#     server_name scrutiny.home.server;
+#     server_name windows.home.server;
     
 #     location / {
-#         proxy_pass http://scrutiny:8080;
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto $scheme;
+#         proxy_pass http://windows:8006;
+
+#         include /etc/nginx/proxy-headers.conf;
+
+#         # WebSocket 支持
+#         proxy_http_version 1.1;
+#         proxy_set_header Upgrade $http_upgrade;
+#         proxy_set_header Connection "upgrade";
+
+#         proxy_read_timeout 86400s;  # 24小时
+#         proxy_send_timeout 86400s;
+#         proxy_connect_timeout 300s;
+
+#         # 性能优化
+#         proxy_buffering off;
 #     }
 # }
 
-# # Jellyfin
-# server {
-#     listen 80;
-#     server_name jellyfin.home.server;
-    
-#     location / {
-#         proxy_pass http://jellyfin:8096;  # Jellyfin 默认端口是 8096
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto $scheme;
-        
-#         # Jellyfin 需要的一些特殊头部
-#         proxy_set_header X-Forwarded-Host $host;
-#         proxy_set_header X-Forwarded-Server $host;
-#     }
-# }
