--- a/filebrowser/docker-compose.yml
+++ b/filebrowser/docker-compose.yml
@@ -3,12 +3,18 @@ services:
     image: filebrowser/filebrowser:latest
     container_name: filebrowser
     restart: unless-stopped
-    ports:
-      - 8088:80
+    # ports:
+    #   - 80:80
     volumes:
       - /mnt/common/shares:/srv/shares
       - ./config:/config
     environment:
       - FB_DATABASE=/config/filebrowser.db
-      - FB_ROOT=/srv/shares  # 设置默认根目录
-      - FB_RULES=/config/rules.json  # 自定义权限规则
+      - FB_ROOT=/srv/shares # 设置默认根目录
+      - FB_RULES=/config/rules.json # 自定义权限规则
+    networks:
+      - webnet
+
+networks:
+  webnet:
+    external: true
