--- a/nginx/docker-compose.yml
+++ b/nginx/docker-compose.yml
@@ -8,12 +8,13 @@ services:
       - "80:80"
       - "443:443" # 为后续 HTTPS 准备
     volumes:
+      - ./nginx-config/proxy-headers.conf:/etc/nginx/proxy-headers.conf:ro
       - ./nginx-config/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx-config/conf.d:/etc/nginx/conf.d:ro
       - ./nginx-config/logs:/var/log/nginx
+    restart: unless-stopped
     networks:
       - webnet
-    restart: unless-stopped
 
 networks:
   webnet:
