--- a/mkvtoolnix/docker-compose.yml
+++ b/mkvtoolnix/docker-compose.yml
@@ -3,8 +3,8 @@ services:
     image: jlesage/mkvtoolnix:latest
     container_name: mkvtoolnix
     environment:
-      HTTP_PROXY: http://192.168.31.112:20171
-      HTTPS_PROXY: http://192.168.31.112:20171
+      HTTP_PROXY: http://home.server:20171
+      HTTPS_PROXY: http://home.server:20171
       TZ: Asia/Shanghai
       USER_ID: 1000
       GROUP_ID: 1000
