--- a/nginx/nginx-config/conf.d/default.conf
+++ b/nginx/nginx-config/conf.d/default.conf
@@ -1,20 +1,12 @@
 # 默认服务 - 可以指向 Homer 导航页
-# server {
-#     listen 80;
-#     server_name home.server;
+server {
+    listen 80;
+    server_name home.server;
     
-#     location / {
-#         proxy_pass http://homer:8080;
-#     }
-# }
-# # 默认服务器 - 处理未知子域名
-# server {
-#     listen 80 default_server;
-#     server_name _;
-    
-#     # 重定向到 Homer 主页
-#     return 301 http://homer.home.server;
-# }
+    location / {
+        proxy_pass http://homer:8080;
+    }
+}
 
 # Homer 导航页
 server {
