--- a/stirlingpdf/docker-compose.yml
+++ b/stirlingpdf/docker-compose.yml
@@ -11,8 +11,8 @@ services:
     #      - ./customFiles:/customFiles/
     #      - ./logs:/logs/
     environment:
-      - HTTP_PROXY=http://192.168.31.112:20171
-      - HTTPS_PROXY=http://192.168.31.112:20171
+      - HTTP_PROXY=http://home.server:20171
+      - HTTPS_PROXY=http://home.server:20171
       - DOCKER_ENABLE_SECURITY=false
       - INSTALL_BOOK_AND_ADVANCED_HTML_OPS=false
       - LANGS=zh_CN
