--- a/nginx/nginx-config/conf.d/default.conf
+++ b/nginx/nginx-config/conf.d/default.conf
@@ -151,7 +151,7 @@ server {
     }
 }
 
-# # Stirling-PDF
+# Stirling-PDF
 server {
     listen 80;
     server_name stirlingpdf.home.server;
@@ -187,17 +187,17 @@ server {
     }
 }
 
-## Wetty
-server {
-    listen 80;
-    server_name wetty.home.server;
+# Wetty
+# server {
+#     listen 80;
+#     server_name wetty.home.server;
     
-    location / {
-        proxy_pass http://wetty:3000;
+#     location / {
+#         proxy_pass http://wetty:3000;
 
-        include /etc/nginx/proxy-headers.conf;
-    }
-}
+#         include /etc/nginx/proxy-headers.conf;
+#     }
+# }
 
 # Windows
 # server {
