--- a/jellyfin/docker-compose.yml
+++ b/jellyfin/docker-compose.yml
@@ -13,8 +13,8 @@ services:
       - ./config:/config
       - /mnt/common/shares/fonts:/media/fonts:ro
       - /mnt/common/shares/.art:/media/art:ro
-      - /mnt/series:/media/series:ro
-      - /mnt/movies:/media/movies:ro
+      - /mnt/series/library:/media/series:ro
+      - /mnt/movies/library:/media/movies:ro
     devices:
       - /dev/dri:/dev/dri
     networks:
