--- a/nginx/nginx-config/conf.d/default.conf
+++ b/nginx/nginx-config/conf.d/default.conf
@@ -139,6 +139,32 @@ server {
     }
 }
 
+# Dozzle
+server {
+    listen 80;
+
+    server_name dozzle.home.server;
+    
+    location / {
+        proxy_pass http://dozzle:8080;
+
+        include /etc/nginx/proxy-headers.conf;
+    }
+}
+
+# it-tools
+server {
+    listen 80;
+
+    server_name ittools.home.server;
+    
+    location / {
+        proxy_pass http://ittools:80;
+
+        include /etc/nginx/proxy-headers.conf;
+    }
+}
+
 # MKVToolNix
 server {
     listen 80;
@@ -146,18 +172,6 @@ server {
     
     location / {
         proxy_pass http://mkvtoolnix:5800;
-
-        include /etc/nginx/proxy-headers.conf;
-    }
-}
-
-# Stirling-PDF
-server {
-    listen 80;
-    server_name stirlingpdf.home.server;
-    
-    location / {
-        proxy_pass http://stirlingpdf:8080;
 
         include /etc/nginx/proxy-headers.conf;
     }
@@ -186,6 +200,18 @@ server {
         proxy_buffering off;
     }
 }
+
+# # Stirling-PDF
+# server {
+#     listen 80;
+#     server_name stirlingpdf.home.server;
+    
+#     location / {
+#         proxy_pass http://stirlingpdf:8080;
+
+#         include /etc/nginx/proxy-headers.conf;
+#     }
+# }
 
 # Wetty
 # server {
