--- a/homer/docker-compose.yml
+++ b/homer/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     # ports:
     #   - 8080:8080
     environment:
+      - TZ=Asia/Shanghai
       - INIT_ASSETS=1 # default, requires the config directory to be writable for the container user (see user option)
     restart: unless-stopped
     networks:
