--- a/homer/homer-config/config.yml
+++ b/homer/homer-config/config.yml
@@ -126,13 +126,6 @@ services:
         url: "http://qbittorrent.home.server"
         target: "_blank"
 
-      - name: "v2rayA"
-        logo: "/assets/icons/v2raya.png"
-        subtitle: ""
-        tag: "tool"
-        url: "http://v2raya.home.server"
-        target: "_blank"
-
       - name: "IT Tools"
         logo: "/assets/icons/it-tools.svg"
         subtitle: ""
@@ -140,12 +133,12 @@ services:
         url: "http://ittools.home.server"
         target: "_blank"
 
-      # - name: "Stirling-PDF"
-      #   logo: "/assets/icons/stirling-pdf.svg"
-      #   subtitle: ""
-      #   tag: "tool"
-      #   url: "http://stirlingpdf.home.server/?lang=zh_CN"
-      #   target: "_blank"
+      - name: "Stirling-PDF"
+        logo: "/assets/icons/stirling-pdf.svg"
+        subtitle: ""
+        tag: "tool"
+        url: "http://stirlingpdf.home.server/?lang=zh_CN"
+        target: "_blank"
 
   - name: "System"
     icon: "fa-solid fa-gears"
@@ -157,20 +150,6 @@ services:
         url: "http://glances.home.server"
         target: "_blank"
 
-      - name: "Dozzle"
-        logo: "/assets/icons/dozzle.svg"
-        subtitle: ""
-        tag: "system"
-        url: "http://dozzle.home.server"
-        target: "_blank"
-
-      - name: "Nginx Proxy Manager"
-        logo: "/assets/icons/nginx-proxy-manager.svg"
-        subtitle: ""
-        tag: "system"
-        url: "http://home.server:81"
-        target: "_blank"
-
       - name: "Scrutiny"
         logo: "/assets/icons/scrutiny.svg"
         subtitle: ""
@@ -178,18 +157,39 @@ services:
         url: "http://scrutiny.home.server"
         target: "_blank"
 
-      # - name: "WeTTY"
-      #   logo: "/assets/icons/wetty.svg"
-      #   subtitle: ""
-      #   tag: "system"
-      #   url: "http://wetty.home.server"
-      #   target: "_blank"
-
       - name: "FileBrowser"
         logo: "/assets/icons/filebrowser.svg"
         subtitle: ""
         tag: "system"
         url: "http://filebrowser.home.server"
+        target: "_blank"
+
+      - name: "Dozzle"
+        logo: "/assets/icons/dozzle.svg"
+        subtitle: ""
+        tag: "system"
+        url: "http://dozzle.home.server"
+        target: "_blank"
+
+      - name: "Dockge"
+        logo: "/assets/icons/dockge.svg"
+        subtitle: ""
+        tag: "system"
+        url: "http://dockge.home.server"
+        target: "_blank"
+
+      - name: "v2rayA"
+        logo: "/assets/icons/v2raya.png"
+        subtitle: ""
+        tag: "system"
+        url: "http://v2raya.home.server"
+        target: "_blank"
+
+      - name: "Nginx Proxy Manager"
+        logo: "/assets/icons/nginx-proxy-manager.svg"
+        subtitle: ""
+        tag: "system"
+        url: "http://home.server:81"
         target: "_blank"
 
       - name: "Windows 10"
