--- a/nginxproxymanager/docker-compose.yml
+++ b/nginxproxymanager/docker-compose.yml
@@ -1,12 +1,13 @@
+# liuyuchuan816@live.com:liuyuchuan
 services:
   app:
-    image: 'jc21/nginx-proxy-manager:latest'
+    image: jc21/nginx-proxy-manager:latest
     container_name: nginxproxymanager
     restart: unless-stopped
     ports:
-      - '80:80'
-      - '81:81'
-      - '443:443'
+      - 80:80
+      - 81:81
+      - 443:443
     environment:
       - TZ=Asia/Shanghai
     volumes:
@@ -14,7 +15,6 @@ services:
       - ./config/letsencrypt:/etc/letsencrypt
     networks:
       - webnet
-
 networks:
   webnet:
     external: true
