--- a/qbittorrent/docker-compose.yml
+++ b/qbittorrent/docker-compose.yml
@@ -1,3 +1,4 @@
+# admin:liuyuchuan
 services:
   qbittorrent:
     container_name: qbittorrent
@@ -18,7 +19,6 @@ services:
       - /mnt/common/shares/downloads:/downloads
     networks:
       - webnet
-
 networks:
   webnet:
     external: true
