--- a/filebrowser/docker-compose.yml
+++ b/filebrowser/docker-compose.yml
@@ -1,3 +1,4 @@
+# admin:liuyuchuan
 services:
   filebrowser:
     image: filebrowser/filebrowser:latest
@@ -15,7 +16,6 @@ services:
       - FB_RULES=/config/rules.json # 自定义权限规则
     networks:
       - webnet
-
 networks:
   webnet:
     external: true
